Detalles de estilo + botones likes + caja facebook

--- a/templates/core/ver_ciudad.html
+++ b/templates/core/ver_ciudad.html
@@ -30,6 +30,8 @@
         </tbody>
     </table>
 
+    <div align="center"><div class="fb-comments" data-href="{{request.get_full_path}}" data-num-posts="2" data-width="900"></div></div>
+
     <h3>Comentarios:</h3>
     {% render_comment_list for ciudad_actual %}
 
