--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,10 @@
 		<link href="/media/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 		<link href="/media/css/estilo.css" rel="stylesheet" type="text/css" />
 		<link href="/media/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
+
+        <meta name="google-site-verification" content="NVSk_0zcZdYua2ILJ4L0DvspOCmHujouihZPlo3mDco">
+        <link href="https://plus.google.com/117455886911192315188" rel="publisher">
+
         <!--[if lt IE 9]>
             <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
@@ -16,6 +20,18 @@
 		{% block custom_top_scripts %}{% endblock %}
 	</head>
 	<body>
+
+        <!-- Incluir el SDK de Facebook -->
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/es_LA/all.js#xfbml=1";
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
+
+
 	    {% block navbar %}{% endblock %}
         <div class="container-fluid">
             <div id="mensajes" align="center">{% include "mensajes.html" %}</div>
