--- a/templates/core/ver_mapa_ciudad.html
+++ b/templates/core/ver_mapa_ciudad.html
@@ -67,7 +67,7 @@
 {% endblock %}
 
 {% block custom_scripts %}
-<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/openlayers/2.11/OpenLayers.js"></script>
+<script src="http://openlayers.org/api/OpenLayers.js"></script>
 <script type="text/javascript" src="/media/js/bootstrap-typeahead-gist2204728.js"></script>
 <script src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
 <script src="http://maps.google.com/maps/api/js?v=3.6&amp;sensor=false"></script>
