--- a/templates/core/ver_linea.html
+++ b/templates/core/ver_linea.html
@@ -1,4 +1,11 @@
 {% extends "maquetado.html" %}
+{% load bootstrap_tags %}
+
+{% block custom_top_scripts %}
+    <script src="http://openlayers.org/api/OpenLayers.js"></script>
+    <script src="http://maps.google.com/maps/api/js?v=3.6&amp;sensor=false"></script>
+    <link rel="stylesheet" href="http://openlayers.org/dev/theme/default/style.css" type="text/css" />
+{% endblock %}
 
 {% block bloque_izquierda %}
     <ul class="breadcrumb">
@@ -9,16 +16,16 @@
 
     <h1>Linea {{linea_actual.nombre}} de {{ciudad_actual.nombre}}</h1>
 
+    <div class="thumbnail"><div id="map" style="background:lightblue; height:300px;"></div></div>
+
+    <h3>Recorridos de la linea {{linea_actual.nombre}}:</h3>
     <table class="table table-striped table-bordered table-condensed">
-        <thead>
-            <tr>
-            <th>Nombre del recorrido</th>
-            </tr>
-        </thead>
         <tbody>
-        {% for recorrido in recorridos %}
+        {% for columna in recorridos|dividir_columnas:2 %}
             <tr>
-                <td><a href="{{recorrido.slug}}">Recorrido {{recorrido.nombre}}</a></td>
+            {% for recorrido in columna %}
+                <td><a href={{recorrido.slug}}/>Recorrido {{recorrido.nombre}} (de {{recorrido.inicio}} a {{recorrido.fin}})<a></td>
+            {% endfor %}
             </tr>
         {% endfor %}
         </tbody>
@@ -26,4 +33,36 @@
 
     <h3>Dejanos un comentario sobre la linea "{{linea_actual.nombre}}"</h3>
     <div align="center"><div class="fb-comments" data-href="http://www.cualbondi.com.ar{{request.get_full_path}}" data-num-posts="2" data-width="900"></div></div>
+{% endblock %}
+
+{% block custom_ready_function %}
+    //Proyeccion que se necesita para transformar proyecciones mas adelante
+    var proj = new OpenLayers.Projection("EPSG:4326");
+
+    //Creamos el mapa
+    map = new OpenLayers.Map("map", {theme: null})
+    var gmap = new OpenLayers.Layer.Google(
+        "Google Streets", {numZoomLevels: 20}
+    );
+    map.addLayers([gmap]);
+    map.setCenter(new OpenLayers.LonLat{{ ciudad_actual.centro.coords }}.transform(
+        new OpenLayers.Projection("EPSG:4326"),
+        map.getProjectionObject()
+    ), {{ ciudad_actual.zoom }});
+
+    //Le agregamos una capa para el poligono de la ciudad
+    var style = {'strokeWidth': 2, 'strokeColor': '#0033CC', fillColor: "#0066CC", fillOpacity: 0.5}
+    var layer_recorridos = new OpenLayers.Layer.Vector("Recorridos", {styleMap: new OpenLayers.StyleMap(style) });
+    map.addLayer(layer_recorridos)
+
+    {% for recorrido in recorridos %}
+        path_recorrido = new OpenLayers.Format.WKT().read('{{recorrido.ruta.wkt}}');
+        path_recorrido.geometry.transform(proj, map.getProjectionObject())
+        layer_recorridos.addFeatures([path_recorrido]);
+    {% endfor %}
+
+    //Acomodar el zoom al poligono
+    var extent = new OpenLayers.Bounds();
+    extent.extend(path_recorrido.geometry.getBounds())
+    map.zoomToExtent(extent);
 {% endblock %}
