--- a/templates/core/seleccionar_ciudad.html
+++ b/templates/core/seleccionar_ciudad.html
@@ -2,84 +2,23 @@
 
 <!--Este es un template distinto a todos, por eso redefine el blocke "content" -->
 {% block content %}
-
-        <div class="row-fluid" style="margin-bottom:20px;">
-            <div class="span7">
-                <div class="row-fluid">
-                    <div class="span6">
-                        <img src="/media/img/logo.png" />
-                    </div>
-                    <div class="span6">
-                        <h2>Selecioná tu ciudad</h2>
-                        <p>... y comenzá a realizar tus búsquedas</p>
-                        <form method="POST" action="/seleccionar-ciudad/">
-                        {% csrf_token %}
-
-                        <select name="ciudad" class="span4">
-                        {% for ciudad in ciudades %}
-                            <option value="{{ciudad.id}}">{{ciudad.nombre}}</option>
-                        {% endfor %}
-                        </select>
-
-                        <label class="checkbox">
-                            <input type="checkbox" name="predeterminada" value="true" />
-                            Hacerla mi ciudad predeterminada
-                        </label>
-                        <p>
-                            <button type="submit" name="next" value="mapa" class="btn btn-success btn-large">Ir al mapa &raquo;</button>
-                            <button type="submit" name="next" value="contenido" class="btn btn-primary btn-large">Ir al contenido &raquo;</button>
-                        </p>
-                        </form>
-                    </div>
-                </div>
+        <div class="row" style="">
+            <div class="span6" align="right">
+                <img src="/media/img/logo_nuevo.png" />
             </div>
-            <div class="span5">
-                <h2>Registrate gratis!</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn" href="#">View details &raquo;</a></p>
+            <div class="span6">
+                <h3>Seleccioná tu ciudad:</h3>
+                {% for ciudad in ciudades %}
+                    <p><a href="/{{ciudad.slug}}/">{{ciudad.nombre}}</a></p>
+                {% endfor %}
             </div>
         </div>
-        <div class="row-fluid" style="margin-bottom:30px;">
-            <div class="span12">
-                <div class="thumbnail">
-                    <div id="mapa" style="height:200px;"></div>
-                </div>
-            </div>
-        </div>
-        <div class="row-fluid">
-            <div class="span4">
-                <h2>¿Para qué registrarme?</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-            <div class="span4">
-                <h2>¿Qué hay de nuevo?</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-            <div class="span4">
-                <h2>Registrate gratis!</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-        </div>
-
 {% endblock %}
 
 {% block custom_ready_function %}
-    function inicializar_mapa() {
-        var latlng = new google.maps.LatLng(-34.61, -58.37);
-        var myOptions = {
-            disableDefaultUI: true,
-            zoom: 13,
-            center: latlng,
-            mapTypeId: google.maps.MapTypeId.ROADMAP
-        };
-        var map = new google.maps.Map($("#mapa")[0], myOptions);
-    }
-    inicializar_mapa();
+
 {% endblock %}
 
 {% block custom_scripts %}
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+
 {% endblock %}
