--- a/templates/maquetado.html
+++ b/templates/maquetado.html
@@ -11,39 +11,11 @@
             </div>
             <div id="bloque_derecha" class="span3">
                 {% block bloque_derecha %}
-
-                <!--ANUNCIO DE GOOGLE-->
-                <div align="center">
-                <script type="text/javascript"><!--
-                google_ad_client = "ca-pub-1193419141108967";
-                /* RichMedia 250x250 (side bar) */
-                google_ad_slot = "6028910256";
-                google_ad_width = 250;
-                google_ad_height = 250;
-                //-->
-                </script>
-                <script type="text/javascript"
-                src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-                </script>
-                </div>
-
+                <div align="center"><img src="/media/img/anunciantes/laguiax.jpg" /></div>
                 <!--CAJA DE FACEBOOK-->
                 <div align="center"><iframe src="//www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fcualbondi&amp;width=250&amp;height=360&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=false&amp;header=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:250px; height:360px;" allowTransparency="true"></iframe></div>
-
-                <!--ANUNCIO DE GOOGLE-->
-                <div align="center">
-                <script type="text/javascript"><!--
-                google_ad_client = "ca-pub-1193419141108967";
-                /* RichMedia 250x250 (Contenido - Barra lateral - Abajo) */
-                google_ad_slot = "6817038539";
-                google_ad_width = 250;
-                google_ad_height = 250;
-                //-->
-                </script>
-                <script type="text/javascript"
-                src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-                </script>
-                </div>
+                <div align="center"><img src="/media/img/anunciantes/noviggo.png" /></div>
+                <div align="center"><img src="/media/img/anunciantes/xaver.png" /></div>
                 {% endblock %}
             </div>
         </div>
